--- a/src/main/webapp/faces/hello.xhtml
+++ b/src/main/webapp/faces/hello.xhtml
@@ -17,7 +17,7 @@
             <h:message for="name" style="color:red" />
             <br/>
             <h:inputText id="email" value="#{hello2.email}">
-                <f:validator validatorId="validatorBean"/>
+                <f:validator validatorId="emailValidator"/>
             </h:inputText>
             <h:message for="email" style="color:red" />
             <br/>
