--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,9 +9,9 @@
         <h:form>
             <h:panelGroup>
                 <h:panelGrid columns="1">
-                    <h:commandLink value="testUploadFile" action="/faces/upload"/>
-                    <h:commandLink value="hello" action="/faces/hello" />
-                    <h:commandLink value="test" action="/faces/test" />
+                    <h:commandLink value="Upload File" action="/faces/upload"/>
+                    <h:commandLink value="Hello" action="/faces/hello" />
+                    <h:commandLink value="Test0" action="/faces/test" />
                 </h:panelGrid>
             </h:panelGroup>
         </h:form>
