--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,8 +10,10 @@
             <h:panelGroup>
                 <h:panelGrid columns="1">
                     <h:commandLink value="Upload File" action="/faces/upload"/>
-                    <h:commandLink value="Hello" action="/faces/hello" />
-                    <h:commandLink value="Test0" action="/faces/test" />
+
+<!--                    <h:outputText value="links below are used for verifying server is up" />-->
+<!--                    <h:commandLink value="Hello" action="/faces/hello" />-->
+<!--                    <h:commandLink value="Test0" action="/faces/test" />-->
                 </h:panelGrid>
             </h:panelGroup>
         </h:form>
